	--- 9.15.3 released ---

5277.	[bug]		Cache DB statistics could underflow when serve-stale
			was in use, because of a bug in counter maintenance
			when RRsets become stale.

			Functions for dumping statistics have been updated
			to dump active, stale, and ancient statistic
			counters.  Ancient RRset counters are prefixed
			with '~'; stale RRset counters are still prefixed
			with '#'. [GL #602]

5276.	[func]		DNSSEC Lookaside Validation (DLV) is now obsolete;
			all code enabling its use has been removed from the
			validator, "delv", and the DNSSEC tools. [GL #7]

5275.	[bug]		Mark DS records included in referral messages
			with trust level "pending" so that they can be
			validated and cached immediately, with no need to
			re-query. [GL #964]

5274.	[bug]		Address potential use after free race when shutting
			down rpz. [GL #1175]

5273.	[bug]		Check that bits [64..71] of a dns64 prefix are zero.
			[GL #1159]

5272.	[cleanup]	Remove isc-config.sh script as the BIND 9 libraries
			are now purely internal. [GL #1123]

5271.	[func]		The normal (non-debugging) output of dnssec-signzone
			and dnssec-verify tools now goes to stdout, instead of
			the combination of stderr and stdout.

5270.	[bug]		'dig +expandaaaa +short' did not work. [GL #1152]

5269.	[port]		cygwin: can return ETIMEDOUT on connect() with a
			non-blocking socket. [GL #1133]

5268.	[placeholder]

5267.	[func]		Allow statistics groups display to be toggleable.
			[GL #1030]

5266.	[bug]		named-checkconf failed to report dnstap-output
			missing from named.conf when dnstap was specified.
			[GL #1136]

5265.	[bug]		DNS64 and RPZ nodata (CNAME *.) rules interacted badly
			[GL #1106]

5264.	[func]		New DNS Cookie algorithm - siphash24 - has been added
			to BIND 9, and the old HMAC-SHA DNS Cookie algorithms
			have been removed. [GL #605]

	--- 9.15.2 released ---

5263.	[cleanup]	Use atomics and isc_refcount_t wherever possible.
			[GL #1038]
